syntax = "proto3";

package greatestworks.messages;

option go_package = "greatestworks/internal/proto/messages;messages";
option csharp_namespace = "GreatestWorks.Messages";

// 消息号枚举 - 系统消息 (0x0000 - 0x00FF)
enum SystemMessageID {
  SYSTEM_MESSAGE_ID_UNSPECIFIED = 0;
  
  MSG_HEARTBEAT = 0x0001;   // 心跳消息
  MSG_HANDSHAKE = 0x0002;   // 握手消息
  MSG_AUTH = 0x0003;        // 认证消息
  MSG_DISCONNECT = 0x0004;  // 断开连接
  MSG_ERROR = 0x0005;        // 错误消息
  MSG_PING = 0x0006;        // Ping消息
  MSG_PONG = 0x0007;        // Pong消息
  MSG_SYSTEM_INFO = 0x0008;  // 系统信息
  MSG_SERVER_STATUS = 0x0009; // 服务器状态
  MSG_MAINTENANCE = 0x000A;  // 维护通知
}

// 消息号枚举 - 玩家相关消息 (0x0100 - 0x01FF)
enum PlayerMessageID {
  PLAYER_MESSAGE_ID_UNSPECIFIED = 0;
  
  MSG_PLAYER_LOGIN = 0x0101;     // 玩家登录
  MSG_PLAYER_LOGOUT = 0x0102;    // 玩家登出
  MSG_PLAYER_INFO = 0x0103;      // 玩家信息
  MSG_PLAYER_MOVE = 0x0104;      // 玩家移动
  MSG_PLAYER_CREATE = 0x0105;    // 创建玩家
  MSG_PLAYER_UPDATE = 0x0106;    // 更新玩家
  MSG_PLAYER_DELETE = 0x0107;    // 删除玩家
  MSG_PLAYER_STATUS = 0x0108;    // 玩家状态
  MSG_PLAYER_STATS = 0x0109;    // 玩家属性
  MSG_PLAYER_LEVEL = 0x010A;    // 玩家升级
  MSG_PLAYER_EXP_GAIN = 0x010B; // 玩家经验获得
  MSG_PLAYER_SYNC = 0x010C;     // 玩家同步
  MSG_PLAYER_BAN = 0x010D;      // 玩家封禁
  MSG_PLAYER_UNBAN = 0x010E;    // 玩家解封
  MSG_PLAYER_GM_UPDATE = 0x010F; // GM更新玩家
}

// 消息号枚举 - 战斗相关消息 (0x0200 - 0x02FF)
enum BattleMessageID {
  BATTLE_MESSAGE_ID_UNSPECIFIED = 0;
  
  MSG_CREATE_BATTLE = 0x0201;    // 创建战斗
  MSG_JOIN_BATTLE = 0x0202;      // 加入战斗
  MSG_LEAVE_BATTLE = 0x0203;     // 离开战斗
  MSG_START_BATTLE = 0x0204;     // 开始战斗
  MSG_END_BATTLE = 0x0205;       // 结束战斗
  MSG_BATTLE_ACTION = 0x0206;    // 战斗行动
  MSG_BATTLE_RESULT = 0x0207; // 战斗结果
  MSG_BATTLE_STATUS = 0x0208;    // 战斗状态
  MSG_SKILL_CAST = 0x0209;       // 技能释放
  MSG_DAMAGE_DEALT = 0x020A;     // 伤害计算
  MSG_BATTLE_ROUND = 0x020B;     // 战斗回合
  MSG_BATTLE_SYNC = 0x020C;      // 战斗同步
  MSG_BATTLE_SPECTATE = 0x020D;  // 观战
  MSG_BATTLE_REPLAY = 0x020E;    // 战斗回放
}

// 消息号枚举 - 宠物相关消息 (0x0300 - 0x03FF)
enum PetMessageID {
  PET_MESSAGE_ID_UNSPECIFIED = 0;
  
  MSG_PET_SUMMON = 0x0301;       // 召唤宠物
  MSG_PET_DISMISS = 0x0302;      // 收回宠物
  MSG_PET_INFO = 0x0303;         // 宠物信息
  MSG_PET_MOVE = 0x0304;         // 宠物移动
  MSG_PET_ACTION = 0x0305;       // 宠物行动
  MSG_PET_LEVEL_UP = 0x0306;      // 宠物升级
  MSG_PET_EVOLUTION = 0x0307;    // 宠物进化
  MSG_PET_TRAIN = 0x0308;        // 宠物训练
  MSG_PET_FEED = 0x0309;         // 宠物喂养
  MSG_PET_STATUS = 0x030A;       // 宠物状态
  MSG_PET_SKILL_LEARN = 0x030B;  // 宠物技能学习
  MSG_PET_SKILL_FORGET = 0x030C; // 宠物技能遗忘
  MSG_PET_BOND = 0x030D;         // 宠物羁绊
  MSG_PET_SYNTHESIS = 0x030E;    // 宠物合成
  MSG_PET_SKIN_EQUIP = 0x030F;   // 宠物皮肤装备
}

// 消息号枚举 - 建筑相关消息 (0x0400 - 0x04FF)
enum BuildingMessageID {
  BUILDING_MESSAGE_ID_UNSPECIFIED = 0;
  
  MSG_BUILDING_CREATE = 0x0401;   // 创建建筑
  MSG_BUILDING_UPGRADE = 0x0402;  // 升级建筑
  MSG_BUILDING_DESTROY = 0x0403;  // 摧毁建筑
  MSG_BUILDING_INFO = 0x0404;     // 建筑信息
  MSG_BUILDING_PRODUCE = 0x0405;  // 建筑生产
  MSG_BUILDING_COLLECT = 0x0406;  // 收集资源
  MSG_BUILDING_REPAIR = 0x0407;   // 修复建筑
  MSG_BUILDING_STATUS = 0x0408;    // 建筑状态
  MSG_BUILDING_SYNC = 0x0409;     // 建筑同步
  MSG_BUILDING_MOVE = 0x040A;     // 建筑移动
  MSG_BUILDING_ROTATE = 0x040B;   // 建筑旋转
  MSG_BUILDING_UPGRADE_CANCEL = 0x040C; // 取消升级
}

// 消息号枚举 - 社交相关消息 (0x0500 - 0x05FF)
enum SocialMessageID {
  SOCIAL_MESSAGE_ID_UNSPECIFIED = 0;
  
  MSG_CHAT_MESSAGE = 0x0501;     // 聊天消息
  MSG_FRIEND_REQUEST = 0x0502;   // 好友请求
  MSG_FRIEND_ACCEPT = 0x0503;    // 接受好友
  MSG_FRIEND_REJECT = 0x0504;    // 拒绝好友
  MSG_FRIEND_REMOVE = 0x0505;    // 删除好友
  MSG_FRIEND_LIST = 0x0506;      // 好友列表
  MSG_GUILD_CREATE = 0x0507;     // 创建公会
  MSG_GUILD_JOIN = 0x0508;       // 加入公会
  MSG_GUILD_LEAVE = 0x0509;      // 离开公会
  MSG_GUILD_INFO = 0x050A;       // 公会信息
  MSG_TEAM_CREATE = 0x050B;      // 创建队伍
  MSG_TEAM_JOIN = 0x050C;        // 加入队伍
  MSG_TEAM_LEAVE = 0x050D;       // 离开队伍
  MSG_TEAM_INFO = 0x050E;        // 队伍信息
  MSG_MAIL_SEND = 0x050F;        // 发送邮件
  MSG_MAIL_RECEIVE = 0x0510;     // 接收邮件
  MSG_MAIL_DELETE = 0x0511;      // 删除邮件
  MSG_MAIL_READ = 0x0512;       // 阅读邮件
}

// 消息号枚举 - 物品相关消息 (0x0600 - 0x06FF)
enum ItemMessageID {
  ITEM_MESSAGE_ID_UNSPECIFIED = 0;
  
  MSG_ITEM_USE = 0x0601;         // 使用物品
  MSG_ITEM_EQUIP = 0x0602;       // 装备物品
  MSG_ITEM_UNEQUIP = 0x0603;      // 卸下装备
  MSG_ITEM_DROP = 0x0604;         // 丢弃物品
  MSG_ITEM_PICKUP = 0x0605;       // 拾取物品
  MSG_ITEM_TRADE = 0x0606;        // 交易物品
  MSG_INVENTORY_INFO = 0x0607;    // 背包信息
  MSG_ITEM_INFO = 0x0608;         // 物品信息
  MSG_ITEM_CRAFT = 0x0609;        // 制作物品
  MSG_ITEM_ENHANCE = 0x060A;      // 强化物品
  MSG_ITEM_DISASSEMBLE = 0x060B;  // 分解物品
  MSG_ITEM_SELL = 0x060C;         // 出售物品
  MSG_ITEM_BUY = 0x060D;          // 购买物品
  MSG_ITEM_STACK = 0x060E;        // 物品堆叠
  MSG_ITEM_SPLIT = 0x060F;        // 物品拆分
}

// 消息号枚举 - 任务相关消息 (0x0700 - 0x07FF)
enum QuestMessageID {
  QUEST_MESSAGE_ID_UNSPECIFIED = 0;
  
  MSG_QUEST_ACCEPT = 0x0701;      // 接受任务
  MSG_QUEST_COMPLETE = 0x0702;    // 完成任务
  MSG_QUEST_CANCEL = 0x0703;      // 取消任务
  MSG_QUEST_PROGRESS = 0x0704;    // 任务进度
  MSG_QUEST_LIST = 0x0705;        // 任务列表
  MSG_QUEST_INFO = 0x0706;        // 任务信息
  MSG_QUEST_REWARD = 0x0707;      // 任务奖励
  MSG_QUEST_UPDATE = 0x0708;      // 任务更新
  MSG_QUEST_ABANDON = 0x0709;     // 放弃任务
  MSG_QUEST_SHARE = 0x070A;       // 分享任务
  MSG_QUEST_TRACK = 0x070B;       // 追踪任务
  MSG_QUEST_UNTrack = 0x070C;     // 取消追踪
}

// 消息号枚举 - 查询相关消息 (0x0800 - 0x08FF)
enum QueryMessageID {
  QUERY_MESSAGE_ID_UNSPECIFIED = 0;
  
  MSG_GET_PLAYER_INFO = 0x0801;    // 获取玩家信息
  MSG_GET_ONLINE_PLAYERS = 0x0802; // 获取在线玩家
  MSG_GET_BATTLE_INFO = 0x0803;    // 获取战斗信息
  MSG_GET_RANKING_LIST = 0x0804;   // 获取排行榜
  MSG_GET_SERVER_INFO = 0x0805;    // 获取服务器信息
  MSG_GET_PET_INFO = 0x0806;       // 获取宠物信息
  MSG_GET_BUILDING_INFO = 0x0807; // 获取建筑信息
  MSG_GET_ITEM_INFO = 0x0808;      // 获取物品信息
  MSG_GET_QUEST_INFO = 0x0809;    // 获取任务信息
  MSG_GET_GUILD_INFO = 0x080A;    // 获取公会信息
  MSG_GET_TEAM_INFO = 0x080B;     // 获取队伍信息
  MSG_GET_FRIEND_INFO = 0x080C;   // 获取好友信息
  MSG_GET_MAIL_INFO = 0x080D;     // 获取邮件信息
  MSG_GET_STATS = 0x080E;         // 获取统计信息
}

// 消息号枚举 - 系统管理消息 (0x0900 - 0x09FF)
enum AdminMessageID {
  ADMIN_MESSAGE_ID_UNSPECIFIED = 0;
  
  MSG_ADMIN_BAN_PLAYER = 0x0901;   // 封禁玩家
  MSG_ADMIN_UNBAN_PLAYER = 0x0902; // 解封玩家
  MSG_ADMIN_KICK_PLAYER = 0x0903;  // 踢出玩家
  MSG_ADMIN_MUTE_PLAYER = 0x0904;  // 禁言玩家
  MSG_ADMIN_UNMUTE_PLAYER = 0x0905; // 取消禁言
  MSG_ADMIN_GIVE_ITEM = 0x0906;    // 给予物品
  MSG_ADMIN_TAKE_ITEM = 0x0907;    // 收回物品
  MSG_ADMIN_SET_LEVEL = 0x0908;    // 设置等级
  MSG_ADMIN_SET_EXP = 0x0909;      // 设置经验
  MSG_ADMIN_SET_GOLD = 0x090A;     // 设置金币
  MSG_ADMIN_TELEPORT = 0x090B;     // 传送玩家
  MSG_ADMIN_ANNOUNCE = 0x090C;    // 公告
  MSG_ADMIN_RELOAD_CONFIG = 0x090D; // 重载配置
  MSG_ADMIN_SHUTDOWN = 0x090E;     // 关闭服务器
  MSG_ADMIN_RESTART = 0x090F;      // 重启服务器
}

// 消息头结构
message MessageHeader {
  uint32 magic = 1;        // 魔数标识 (0x47574B53 "GWKS")
  uint32 message_id = 2;    // 消息ID
  uint32 message_type = 3;  // 消息类型
  uint32 flags = 4;         // 标志位
  uint64 player_id = 5;     // 玩家ID
  int64 timestamp = 6;      // 时间戳
  uint32 sequence = 7;      // 序列号
  uint32 length = 8;        // 消息体长度
  string request_id = 9;    // 请求ID
  string session_id = 10;   // 会话ID
}

// 消息标志位枚举
enum MessageFlag {
  MESSAGE_FLAG_UNSPECIFIED = 0;
  MESSAGE_FLAG_REQUEST = 0x0001;    // 请求消息
  MESSAGE_FLAG_RESPONSE = 0x0002;   // 响应消息
  MESSAGE_FLAG_ERROR = 0x0004;     // 错误消息
  MESSAGE_FLAG_ASYNC = 0x0008;     // 异步消息
  MESSAGE_FLAG_BROADCAST = 0x0010; // 广播消息
  MESSAGE_FLAG_ENCRYPTED = 0x0020; // 加密消息
  MESSAGE_FLAG_COMPRESSED = 0x0040; // 压缩消息
  MESSAGE_FLAG_PRIORITY = 0x0080;  // 高优先级消息
  MESSAGE_FLAG_RELIABLE = 0x0100;  // 可靠消息
  MESSAGE_FLAG_ORDERED = 0x0200;   // 有序消息
}

// 消息优先级枚举
enum MessagePriority {
  MESSAGE_PRIORITY_UNSPECIFIED = 0;
  MESSAGE_PRIORITY_LOW = 1;        // 低优先级
  MESSAGE_PRIORITY_NORMAL = 2;     // 普通优先级
  MESSAGE_PRIORITY_HIGH = 3;       // 高优先级
  MESSAGE_PRIORITY_URGENT = 4;     // 紧急优先级
  MESSAGE_PRIORITY_CRITICAL = 5;   // 关键优先级
}
